fix: persist-before-mutate, honest recents, and shared recipe toolchain (#10)
Address code-review findings on recipe management:

- Record recently-used recipes only after execution actually ran:
  previously an aborted run (scan failure, missing engine) still
  persisted the selection to recent.yml and surfaced it under
  Sort:Recent.
- FavoritesService.toggle and RecentRecipesService.record now write to
  disk first and update the in-memory state only on success, so a
  failed save can no longer leave memory and disk permanently diverged
  for the rest of the session.
- favorites() now actually honours its 'in the order they were marked'
  contract (Set.copyOf discarded the LinkedHashSet order).
- Clamp the browser highlight after toggling a favorite: unfavoriting
  the last visible recipe under the favorites filter stranded the
  highlight past the end of the list.
- Show the favorite star in the run-confirmation dialog — ConfirmRunView
  still called the pre-favorites renderer overload.
- Web sort label generator is now exhaustive over SortOrder, so
  applySortOrder(RECENT) can no longer be mislabeled 'Sort: Tags'
  (RECENT degrades to name order; the web UI does not track recents).
- SortOrder.comparator() folds NAME and RECENT into one switch arm so
  the fallback cannot silently drift from name order, and the TUI
  always routes through the recent-aware comparator overload instead
  of special-casing RECENT at the call site.
- Fold UserRecipeSources into core RecipeToolchain: one composition
  point resolves discovery AND execution from the same user-aware
  environment (jars + YAML files + config-dir auto-discovery), with
  eager validation of explicit paths and warning reporting on the
  returned handle — eliminating the userProvider side-effect field
  pattern that was copy-pasted across list/search/tui. run gains
  --recipes-file so file-based user recipes are executable everywhere.
- Extract YamlMappers.configMapper() — the identical Jackson YAML
  setup